# interview-me

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
api/app/: main.py
api/app/ai/: indexer.py  prompts.py  qdrant.py  workflows.py
api/app/api/: routes_admin.py  routes_ai.py  routes_cv.py
api/app/core/: config.py  identity.py  rate_limit.py  security.py
api/data/knowledge/: README.md
api/data/static/: cv.pdf.example
api/tests/: conftest.py  test_identity.py  test_prompts.py
api/tests/data/: identity.json
docs/: deployment-contract.md
embedding/: Dockerfile  main.py  pyproject.toml  requirements.txt
embedding/tests/: conftest.py  test_main.py
indexer/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
