[project]
name = "interview-me-api"
version = "0.1.0"
description = "AI-powered interview chatbot API"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "llama-index-workflows>=0.5.0",
    "openai>=1.58.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
