[project]
name = "interview-me-embedding"
version = "0.1.0"
description = "Text embedding microservice for interview-me"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastembed>=0.4.0",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov>=6.0", "httpx>=0.28.0"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
