[project]
name = "interview-me-indexer"
version = "0.1.0"
description = "Knowledge base indexer for interview-me"
requires-python = ">=3.14,<4.0"
dependencies = [
    "llama-index-core>=0.12.0",
    "qdrant-client>=1.12.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
